# fed5g_analysis

./: .gitattributes  .gitignore  README.md  acm.mplstyle  analysis.ipynb  paper_figures.ipynb  parse.py  pyproject.toml  straggler_analysis.ipynb  tdd_analysis.ipynb  theoretical comparison.ipynb  timing_analysis.ipynb
data/: all_data.csv  all_data_agg.csv  all_models_data.csv
data/bandwidth/: 100mhz_bandwidth.csv  100mhz_bandwidth_modelset.csv  100mhz_bandwidth_serverset.csv  20mhz_bandwidth.csv  20mhz_bandwidth_modelset.csv  20mhz_bandwidth_serverset.csv  40mhz_bandwidth.csv  40mhz_bandwidth_modelset.csv  40mhz_bandwidth_serverset.csv  80mhz_bandwidth.csv  80mhz_bandwidth_modelset.csv  80mhz_bandwidth_serverset.csv
data/distribution/: dirichlet.csv  dirichlet_modelset.csv  dirichlet_serverset.csv  iid.csv  iid_modelset.csv  iid_serverset.csv
data/nodes/: 1_nodes.csv  1nodes.csv  1nodes_modelset.csv  1nodes_serverset.csv  3_nodes.csv  3nodes.csv  3nodes_modelset.csv  3nodes_serverset.csv  4nodes.csv  4nodes_modelset.csv  4nodes_serverset.csv  5nodes.csv  5nodes_modelset.csv  5nodes_serverset.csv  6nodes.csv  6nodes_modelset.csv  6nodes_serverset.csv
data/rank/: 1x1_rank.csv  1x1_rank_modelset.csv  1x1_rank_serverset.csv  2x2_rank.csv  2x2_rank_modelset.csv  2x2_rank_serverset.csv
data/tdd_split/: 2-2_tdd.csv  2-2_tdd_modelset.csv  2-2_tdd_server_split.csv  2-7_tdd.csv  2-7_tdd_modelset.csv  2-7_tdd_server_split.csv  3-1_tdd.csv  3-1_tdd_modelset.csv  3-1_tdd_server_split.csv  5-4_tdd.csv  5-4_tdd_modelset.csv  5-4_tdd_server_split.csv  7-2_tdd.csv  (+2 more)
